# cleard

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVLOG.md  LICENSE  README.md  flake.nix  install.sh  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml  republish.yml
src/: cli.rs  config.rs  delete.rs  main.rs  model.rs  rules.rs  scanner.rs
src/tui/: events.rs  mod.rs  ui.rs
