[package]
name = "cleard"
version = "1.0.3"
edition = "2021"
rust-version = "1.90"
description = "Interactive, multi-ecosystem build-artifact disk reclaimer (npkill, but for everything)"
authors = ["ervan <ervanroot@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ervan0707/cleard"
documentation = "https://github.com/ervan0707/cleard#readme"
homepage = "https://github.com/ervan0707/cleard"
keywords = ["cli", "tui", "disk", "cleanup", "node_modules"]
categories = ["command-line-utilities", "filesystem"]
# Keep packaging/CI/dev cruft out of the published crate so it stays lean.
# crates.io users only need the Rust source; everything else is delivery
# machinery for the other channels (npm/PyPI/GitHub/Nix).
exclude = [
    ".github/*",
    ".gitignore",
    ".envrc",
    "packages/*",
    "flake.nix",
    "flake.lock",
    ".direnv/*",
    "install.sh",
    "pyproject.toml",
    "RELEASE-STRATEGY.md",
    "DEVLOG.md",
    "CLAUDE.md",
]

[[bin]]
name = "cleard"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
dirs = "5"
humansize = "2"
jwalk = "0.8"
rayon = "1"
# crossterm is used via ratatui's re-export (ratatui::crossterm) to avoid a
# second, possibly mismatched crossterm version in the tree.
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
