# PyPI packaging via maturin. `bindings = "bin"` makes maturin wrap the
# compiled Rust *executable* in the wheel (no PyO3, no Python interop) — so
# `pip install cleard` just drops the binary onto the user's PATH.
# `dynamic = ["version"]` pulls the version from Cargo.toml, which CI stamps
# before building, keeping every channel on the exact same version.
[build-system]
requires = ["maturin>=1.8.6"]
build-backend = "maturin"

[project]
name = "cleard"
description = "Interactive, multi-ecosystem build-artifact disk reclaimer (npkill, but for everything)"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
license = { text = "MIT" }
authors = [{ name = "ervan", email = "ervanroot@gmail.com" }]
keywords = ["cli", "tui", "disk", "cleanup", "node_modules"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ervan0707/cleard"
Repository = "https://github.com/ervan0707/cleard"
Documentation = "https://github.com/ervan0707/cleard#readme"
"Bug Reports" = "https://github.com/ervan0707/cleard/issues"

[tool.maturin]
bindings = "bin"
strip = true
